refactor: 우수 스터디원 조회 로직 개선